k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "backend-deployment"
  namespace: $K8S_NAMESPACE
spec:
  selector:
    matchLabels:
      app: "backend"
  replicas: 2
  template:
    metadata:
      labels:
        app: "backend"
    spec:
      containers:
      - image: $ECR_REPOSITORY_URL:$IMAGE_TAG
        imagePullPolicy: Always
        name: "backend"
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
