k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "service"
  namespace: $K8S_NAMESPACE
spec:
  ports:
    - port: 80
      name: "http"
      targetPort: 8080
      protocol: TCP
    - port: 443
      name: "https"
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: $K8S_NAMESPACE
