k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ingress"
  namespace: $K8S_NAMESPACE
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/certificate-arn: $CERT_ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: $K8S_NAMESPACE
spec:
  rules:
    - http:
        paths:
          - path: /*
           backend:
             serviceName: ssl-redirect
             servicePort: use-annotation
          - path: /users/*
            backend:
              serviceName: user-service
              servicePort: 80
          - path: /*
            backend:
              serviceName: default-service
              servicePort: 80
